# linux_proc_analysis

./: CMakeLists.txt  README.md  a.out  file_path_syscall.txt  ps_page.c  ps_page.h  sys_page.c  sys_page.h  syscall.c  syscall_test.c
backup_proc_analysis/: functions.c  functions.h  main.c
design1_1/: CMakeLists.txt  main.c  window_functions.c  window_functions.h
design1_2/: CMakeLists.txt  main.c
module_driver/: .cache.mk  .test.c.swp  .xyxdev.ko.cmd  .xyxdev.mod.o.cmd  .xyxdev.o.cmd  Makefile  a.out  modules.order  test.c  xyxdev.c  xyxdev.ko  xyxdev.mod.c
module_driver/.tmp_versions/: xyxdev.mod
mulproc_display/: CMakeLists.txt  main.c  save.txt  table_op.c  table_op.h  window_proc.c  window_proc.h
multhread_copy/: CMakeLists.txt  copy  main.c
proc_analysis/: CMakeLists.txt  functions.c  functions.h  main.c  mem_page.c  mem_page.h  ps_page.c  ps_page.h
sample/: CMakeLists.txt  main.c
thread_display/: CMakeLists.txt  main.c  window_functions.h
